<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_movie"
            android:layout_width="match_parent"
            android:elevation="4dp"
            android:layout_height="wrap_content"
            tools:listitem="@layout/item_movie_holder" />

</LinearLayout>