...
    <string name="title_activity_movie_detail">MovieDetailActivity</string>
    <string name="title_activity_tv_detail">TvDetailActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="play_trailer">Play Trailer</string>
    <string name="add_to_favorite">ADD TO FAVORITE</string>
    <string name="remove_from_favorite">REMOVE FROM FAVORITE</string>
    <string name="has_been_added">has been added to favorite list</string>
    <string name="has_been_remove">has been remove from favorite list</string>

    <string name="tab_info">Info</string>
    <string name="tab_review">Review</string>
    <string name="tab_cast">Cast</string>
...
